more content on the pages

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -12,7 +12,23 @@ p {
 p a {
   text-decoration: underline;
 }
+div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+}
 
+div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+    background-color: #777;
+}
 h1,
 h2,
 h3,
