--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -3,7 +3,7 @@
   position: absolute;
   border-bottom: 1px solid $gray-200;
   background-color: white;
-  @include sans-serif-font;
+  @include arial-font;
   .navbar-brand {
     font-weight: 800;
     color: $gray-800;
@@ -80,7 +80,7 @@
       .navbar-nav {
         > li.nav-item {
           > a {
-            color: $gray-900;
+            color: $blue-900;
             &:focus,
             &:hover {
               color: $primary;
